--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container">
         <div class="header-row-flex">
             <div class="header-logo">
-                <a href="/"><img src="images/logo.jpg" alt=""></a>
+                <a href="/"><img src="images/logo.png" alt=""></a>
             </div>
             <div class="header-time">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
@@ -53,7 +53,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar-main">
             <ul class="nav navbar-nav">
-                <li><a href="#">О нас</a></li>
+                <li><a href="#about">О нас</a></li>
                 <li><a href="#">Курсы</a></li>
                 <li><a href="#">Подготовка к олимпиадам</a></li>
                 <li><a href="#">Консультации</a></li>
@@ -74,8 +74,12 @@
     </div>
 </div>
 <div class="container">
-    <h1 class="main-title">Мыслич и знанич</h1>
+    <h1 class="main-title" id="about">Мыслич и знанич</h1>
     <p class="main-sub-title">Центр  дополнительного  образования</p>
+    <p>Образовательный Центр МЗ создан с целью эффективной подготовки школьников к ЕГЭ и ОГЭ, олимпиадам по химии, физике, информатике, экономике и математике. Наш центр подготовки к ЕГЭ и ОГЭ проводит подготовительные курсы для абитуриентов ВУЗов, в которых при поступлении необходимы глубокие знания по профильным предметам – по химии, физике, информатике, экономике или математике.</p>
+    <p>Высокопрофессиональное преподавание и использование новейших методик дают высокий уровень результативности: наши слушатели успешно сдают ОГЭ, ЕГЭ, становятся победителями и занимают призовые места на олимпиадах различных уровней, а также углубляют и расширяют свои знания в химии, физике, информатике, экономике и математике.</p>
+    <p>Занятия и консультации проводят педагоги ведущих вузов Москвы и Курска, прошедих повышение квалификации в оразовательном центре "Сириус" образовательного фонда Талант и Успех".</p>
+    <blockquote>Изучаю, мыслю,знаю!</blockquote>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
