--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="collapse navbar-collapse" id="navbar-main">
             <ul class="nav navbar-nav">
                 <li><a href="#about">О нас</a></li>
-                <li><a href="#">Курсы</a></li>
+                <li><a href="#courses">Курсы</a></li>
                 <li><a href="#">Подготовка к олимпиадам</a></li>
                 <li><a href="#">Консультации</a></li>
                 <li><a href="#">Контакты</a></li>
@@ -79,7 +79,90 @@
     <p>Образовательный Центр МЗ создан с целью эффективной подготовки школьников к ЕГЭ и ОГЭ, олимпиадам по химии, физике, информатике, экономике и математике. Наш центр подготовки к ЕГЭ и ОГЭ проводит подготовительные курсы для абитуриентов ВУЗов, в которых при поступлении необходимы глубокие знания по профильным предметам – по химии, физике, информатике, экономике или математике.</p>
     <p>Высокопрофессиональное преподавание и использование новейших методик дают высокий уровень результативности: наши слушатели успешно сдают ОГЭ, ЕГЭ, становятся победителями и занимают призовые места на олимпиадах различных уровней, а также углубляют и расширяют свои знания в химии, физике, информатике, экономике и математике.</p>
     <p>Занятия и консультации проводят педагоги ведущих вузов Москвы и Курска, прошедих повышение квалификации в оразовательном центре "Сириус" образовательного фонда Талант и Успех".</p>
-    <blockquote>Изучаю, мыслю,знаю!</blockquote>
+    <blockquote>Изучаю, мыслю, знаю!</blockquote>
+    <h2 class="main-title" id="courses">Курсы по направлениям</h2>
+    <div class="courses-flex-block">
+        <div class="courses-item">
+            <div class="courses-img">
+                <img src="images/matem2.jpg" alt="">
+            </div>
+            <div class="courses-title">
+                Олимпиадная математика (с 5 кл)
+            </div>
+        </div>
+        <div class="courses-item">
+            <div class="courses-img">
+                <img src="images/matem1.jpg" alt="">
+            </div>
+            <div class="courses-title">
+                Олимпиадная математика (с 9 кл)
+            </div>
+        </div>
+        <div class="courses-item">
+            <div class="courses-img">
+                <img src="images/himiya.jpg" alt="">
+            </div>
+            <div class="courses-title">
+                Олимпиадная химия
+            </div>
+        </div>
+        <div class="courses-item">
+            <div class="courses-img">
+                <img src="images/informatica.jpg" alt="">
+            </div>
+            <div class="courses-title">
+                Олимпиадная информатика
+            </div>
+        </div>
+        <div class="courses-item">
+            <div class="courses-img">
+                <img src="images/econom.jpg" alt="">
+            </div>
+            <div class="courses-title">
+                Олимпиадная экономика
+            </div>
+        </div>
+        <div class="courses-item">
+            <div class="courses-img">
+                <img src="images/geometr.jpg" alt="">
+            </div>
+            <div class="courses-title">
+                Геометрия на подвижных чертежах
+            </div>
+        </div>
+        <div class="courses-item">
+            <div class="courses-img">
+                <img src="images/matem3.jpg" alt="">
+            </div>
+            <div class="courses-title">
+                Занимательная математика
+            </div>
+        </div>
+        <div class="courses-item">
+            <div class="courses-img">
+                <img src="images/fizika.jpg" alt="">
+            </div>
+            <div class="courses-title">
+                Физика вокруг нас
+            </div>
+        </div>
+        <div class="courses-item">
+            <div class="courses-img">
+                <img src="images/biznes.jpg" alt="">
+            </div>
+            <div class="courses-title">
+                Решение бизнес-кейсов
+            </div>
+        </div>
+        <div class="courses-item">
+            <div class="courses-img">
+                <img src="images/deutsch.png" alt="">
+            </div>
+            <div class="courses-title">
+                Немецкий язык с носителем
+            </div>
+        </div>
+    </div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
