--- a/index.html
+++ b/index.html
@@ -42,6 +42,25 @@
         </div>
     </div>
 </header>
+<div class="modal fade" id="modal-send" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Закрыть">
+                <span aria-hidden="true">×</span>
+            </button>
+            <div class="modal-body">
+                <div class="owl-feedback-form js-send-form">
+                    <h3>Хотите записаться на занятия?</h3>
+                    <p>Заполните и отправьте заявку!</p>
+                    <input type="text" name="name" placeholder="Ваше имя">
+                    <input type="text" name="phone" placeholder="Телефон">
+                    <input type="text" name="email" placeholder="email">
+                    <a href="#" class="js-send-btn">Отправить заявку</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="container">
     <nav class="navbar navbar-default">
         <div class="navbar-header">
@@ -55,9 +74,9 @@
             <ul class="nav navbar-nav">
                 <li><a href="#about">О нас</a></li>
                 <li><a href="#courses">Курсы</a></li>
-                <li><a href="#">Подготовка к олимпиадам</a></li>
-                <li><a href="#">Консультации</a></li>
-                <li><a href="#">Контакты</a></li>
+                <li><a href="#olympic">Подготовка к олимпиадам</a></li>
+                <li><a href="#consultations">Консультации</a></li>
+                <li><a href="#contacts">Контакты</a></li>
             </ul>
         </div>
     </nav>
@@ -163,7 +182,72 @@
             </div>
         </div>
     </div>
+    <div class="order-btn">
+        <button data-toggle="modal" data-target="#modal-send" class="main-button-obj">ЗАПИСАТЬСЯ</button>
+    </div>
+    <h2 class="main-title" id="olympic">Приглашам обучающихся для подготовки к олимпиадам по предметам:</h2>
+    <div class="free-service-item">
+        <i class="fa fa-check-circle-o" aria-hidden="true"></i> Математика
+    </div>
+    <div class="free-service-item">
+        <i class="fa fa-check-circle-o" aria-hidden="true"></i> Информатика
+    </div>
+    <div class="free-service-item">
+        <i class="fa fa-check-circle-o" aria-hidden="true"></i> Физика
+    </div>
+    <div class="free-service-item">
+        <i class="fa fa-check-circle-o" aria-hidden="true"></i> Химия
+    </div>
+    <div class="free-service-item">
+        <i class="fa fa-check-circle-o" aria-hidden="true"></i> Экономика
+    </div>
+    <h2 class="main-title" id="consultations">Консультации</h2>
+    <div class="image-consult">
+        <img src="images/ege.jpg" alt="">
+    </div>
+    <p>Мыслич и знанич оказывает консультационные услуги при подготовке исследовательских работ и проектов школьников.</p>
+    <p>Занятия и консультации проводят педагоги ведущих вузов Москвы и Курска, прошедших повышение квалификации в образовательном центре «Сириус» Образовательного фонда «Талант и Успех».</p>
+    <div class="order-btn">
+        <button data-toggle="modal" data-target="#modal-send" class="main-button-obj">ЗАПИСАТЬСЯ</button>
+    </div>
+    <h2 class="main-title" id="contacts">Контакты</h2>
+    <div class="contact-block-flex">
+        <a href="tel:+79092371337">+7 (909) 237-13-37</a>
+        <a href="mailto:myslichiznanitch46@yandex.ru">myslichiznanitch46@yandex.ru</a>
+    </div>
+    <div class="map-block">
+        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A1d75623558d8d49ff909b8f39f8f6d786d358d6ff4a2eadb777cd3a60e5f56bc&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
+    </div>
 </div>
+<footer class="back-footer">
+    <div class="container">
+        <div class="footer-flex">
+            <div class="footer-logo">
+                <a href="/"><img src="images/logo.png" title="Виктория Пласт" alt="Виктория Пласт">
+                </a>
+            </div>
+            <div class="footer-links">
+                <a href="#about">О нас</a>
+                <a href="#courses">Курсы</a>
+                <a href="#olympic">Подготовка к олимпиадам</a>
+            </div>
+            <div class="footer-links">
+                <a href="#consultations">Консультации</a>
+                <a href="#contacts">Контакты</a>
+            </div>
+            <div class="footer-links">
+                <a href="tel:+79092371337">+7 (909) 237-13-37</a>
+                <a href="mailto:myslichiznanitch46@yandex.ru">myslichiznanitch46@yandex.ru</a>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <i class="fa fa-copyright" aria-hidden="true"></i> Мыслич и знанич, 2019
+        </div>
+        <div class="footer-copyright">
+            <p>Разработано <a href="https://retor.ru" target="_blank">ReTOR</a></p>
+        </div>
+    </div>
+</footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
 <script src="js/bootstrap.js"></script>
