--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
     <div class="container">
         <div class="header-row-flex">
             <div class="header-logo">
-                <a href="/"><img src="images/logo.png" alt=""></a>
+                <a href="/">
+                    <img src="images/logo.png" alt="">
+                    <span>Мыслич и знанич</span>
+                </a>
             </div>
             <div class="header-time">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
