--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- Выше 3 Мета-теги ** должны прийти в первую очередь в голове; любой другой руководитель контент *после* эти теги -->
     <title>Мыслич и знанич</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link href="css/font-awesome.css" rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -38,10 +39,6 @@
             </div>
             <div class="header-btn">
                 <button data-toggle="modal" data-target="#modal-send">Записаться</button>
-            </div>
-            <div class="header-contact">
-                <a href="tel:+79092371337">+7 (909) 237-13-37</a>
-                <a href="mailto:myslichiznanitch46@yandex.ru">myslichiznanitch46@yandex.ru</a>
             </div>
         </div>
     </div>
@@ -215,6 +212,10 @@
         <button data-toggle="modal" data-target="#modal-send" class="main-button-obj">ЗАПИСАТЬСЯ</button>
     </div>
     <h2 class="main-title" id="contacts">Контакты</h2>
+    <div class="contact-title">
+        <span class="contact-title-bold">Адрес:</span>
+        <p class="contact-sub-title">Курск, улица Димитрова, 76, ком. №309</p>
+    </div>
     <div class="contact-block-flex">
         <a href="tel:+79092371337">+7 (909) 237-13-37</a>
         <a href="mailto:myslichiznanitch46@yandex.ru">myslichiznanitch46@yandex.ru</a>
