--- a/courses.html
+++ b/courses.html
@@ -73,11 +73,11 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar-main">
             <ul class="nav navbar-nav">
-                <li><a href="#about">О нас</a></li>
-                <li><a href="#courses">Курсы</a></li>
-                <li><a href="#olympic">Подготовка к олимпиадам</a></li>
-                <li><a href="#consultations">Консультации</a></li>
-                <li><a href="#contacts">Контакты</a></li>
+                <li><a href="#">О нас</a></li>
+                <li><a href="#">Курсы</a></li>
+                <li><a href="#">Подготовка к олимпиадам</a></li>
+                <li><a href="#">Консультации</a></li>
+                <li><a href="#">Контакты</a></li>
             </ul>
         </div>
     </nav>
@@ -190,13 +190,13 @@
                 </a>
             </div>
             <div class="footer-links">
-                <a href="#about">О нас</a>
-                <a href="#courses">Курсы</a>
-                <a href="#olympic">Подготовка к олимпиадам</a>
+                <a href="#">О нас</a>
+                <a href="#">Курсы</a>
+                <a href="#">Подготовка к олимпиадам</a>
             </div>
             <div class="footer-links">
-                <a href="#consultations">Консультации</a>
-                <a href="#contacts">Контакты</a>
+                <a href="#">Консультации</a>
+                <a href="#">Контакты</a>
             </div>
             <div class="footer-links">
                 <a href="tel:+79092371337">+7 (909) 237-13-37</a>
