--- a/contacts.html
+++ b/contacts.html
@@ -28,7 +28,7 @@
             <div class="header-logo">
                 <a href="/">
                     <img src="images/logo.png" alt="">
-                    <span>Мыслич и знанич</span>
+                    <span>Мыслич и Знанич</span>
                 </a>
             </div>
             <div class="header-time">
@@ -94,7 +94,7 @@
     </div>
 </div>
 <div class="container">
-    <h1 class="main-title" id="about">Мыслич и знанич</h1>
+    <h1 class="main-title" id="about">Мыслич и Знанич</h1>
     <h2 class="main-title" id="contacts">Контакты</h2>
     <div class="contact-title">
         <span class="contact-title-bold">Адрес:</span>
@@ -130,7 +130,7 @@
             </div>
         </div>
         <div class="footer-copyright">
-            <i class="fa fa-copyright" aria-hidden="true"></i> Мыслич и знанич, 2019
+            <i class="fa fa-copyright" aria-hidden="true"></i> Мыслич и Знанич, 2019
         </div>
         <div class="footer-copyright">
             <p>Разработано <a href="https://retor.ru" target="_blank">ReTOR</a></p>
