--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Выше 3 Мета-теги ** должны прийти в первую очередь в голове; любой другой руководитель контент *после* эти теги -->
-    <title>Мыслич и знанич</title>
+    <title>Мыслич и Знанич</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
@@ -28,7 +28,7 @@
             <div class="header-logo">
                 <a href="/">
                     <img src="images/logo.png" alt="">
-                    <span>Мыслич и знанич</span>
+                    <span>Мыслич и Знанич</span>
                 </a>
             </div>
             <div class="header-time">
@@ -127,7 +127,7 @@
             </div>
         </div>
         <div class="footer-copyright">
-            <i class="fa fa-copyright" aria-hidden="true"></i> Мыслич и знанич, 2019
+            <i class="fa fa-copyright" aria-hidden="true"></i> Мыслич и Знанич, 2019
         </div>
         <div class="footer-copyright">
             <p>Разработано <a href="https://retor.ru" target="_blank">ReTOR</a></p>
