--- a/about.html
+++ b/about.html
@@ -31,12 +31,6 @@
                     <span>Мыслич и Знанич</span>
                 </a>
             </div>
-            <div class="header-time">
-                <i class="fa fa-map-marker" aria-hidden="true"></i>
-                <div class="header-time-text">
-                    Курск, ул. Димитрова 76, ком. 312
-                </div>
-            </div>
             <div class="header-btn">
                 <button data-toggle="modal" data-target="#modal-send">Записаться</button>
             </div>
@@ -96,9 +90,9 @@
 <div class="container">
     <h1 class="main-title" id="about">О нас</h1>
     <p class="main-sub-title">Центр  дополнительного  образования</p>
-    <p>Образовательный Центр МЗ создан с целью эффективной подготовки школьников к ЕГЭ и ОГЭ, олимпиадам по химии, физике, информатике, экономике и математике. Наш центр подготовки к ЕГЭ и ОГЭ проводит подготовительные курсы для абитуриентов ВУЗов, в которых при поступлении необходимы глубокие знания по профильным предметам – по химии, физике, информатике, экономике или математике.</p>
+    <p>Образовательный Центр "Мыслич и Знанич" создан с целью эффективной подготовки школьников к ЕГЭ и ОГЭ, олимпиадам по химии, физике, информатике, экономике и математике. Наш центр подготовки к ЕГЭ и ОГЭ проводит подготовительные курсы для абитуриентов ВУЗов, в которых при поступлении необходимы глубокие знания по профильным предметам – по химии, физике, информатике, экономике или математике.</p>
     <p>Высокопрофессиональное преподавание и использование новейших методик дают высокий уровень результативности: наши слушатели успешно сдают ОГЭ, ЕГЭ, становятся победителями и занимают призовые места на олимпиадах различных уровней, а также углубляют и расширяют свои знания в химии, физике, информатике, экономике и математике.</p>
-    <p>Занятия и консультации проводят педагоги ведущих вузов Москвы и Курска, прошедих повышение квалификации в оразовательном центре "Сириус" образовательного фонда Талант и Успех".</p>
+    <p>Занятия и консультации проводят педагоги ведущих вузов Москвы и Курска, прошедих повышение квалификации в оразовательном центре "Сириус" образовательного фонда "Талант и Успех".</p>
     <blockquote>Изучаю, мыслю, знаю!</blockquote>
 
     <div class="order-btn">
