--- a/courses.html
+++ b/courses.html
@@ -31,12 +31,6 @@
                     <span>Мыслич и Знанич</span>
                 </a>
             </div>
-            <div class="header-time">
-                <i class="fa fa-map-marker" aria-hidden="true"></i>
-                <div class="header-time-text">
-                    Курск, ул. Димитрова 76, ком. 312
-                </div>
-            </div>
             <div class="header-btn">
                 <button data-toggle="modal" data-target="#modal-send">Записаться</button>
             </div>
@@ -110,7 +104,7 @@
                 <img src="images/matem1.jpg" alt="">
             </div>
             <div class="courses-title">
-                Олимпиадная математика (с 9 кл)
+                Олимпиадная физика (с 9 кл)
             </div>
         </div>
         <div class="courses-item">
@@ -169,14 +163,14 @@
                 Решение бизнес-кейсов
             </div>
         </div>
-        <div class="courses-item">
+        <!--<div class="courses-item">
             <div class="courses-img">
                 <img src="images/deutsch.png" alt="">
             </div>
             <div class="courses-title">
                 Немецкий язык с носителем
             </div>
-        </div>
+        </div>-->
     </div>
     <div class="order-btn">
         <button data-toggle="modal" data-target="#modal-send" class="main-button-obj">ЗАПИСАТЬСЯ</button>
