--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
-
-
 <!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>Проект сайта Мыслич и знанич</title>
+    <title>Проект сайта Мыслич и Знанич</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 </head>
 <body>
 <div class="pages">
-    <div class="pages__project">Проект сайта Мыслич и знанич</div>
+    <div class="pages__project">Проект сайта Мыслич и Знанич</div>
     <div class="pages__title">Готовность по проекту</div>
     <ul class="pages__list">
         <li class="pages__item pages__item_orange">
