--- a/mislich.html
+++ b/mislich.html
@@ -88,13 +88,15 @@
     </div>
 </div>
 <div class="container">
-    <h1 class="main-title" id="about">Мыслич и Знанич</h1>
     <p class="main-sub-title">Центр  дополнительного  образования</p>
-    <p>Образовательный Центр "Мыслич и Знанич" создан с целью эффективной подготовки школьников к ЕГЭ и ОГЭ, олимпиадам по химии, физике, информатике, экономике и математике. Наш центр подготовки к ЕГЭ и ОГЭ проводит подготовительные курсы для абитуриентов ВУЗов, в которых при поступлении необходимы глубокие знания по профильным предметам – по химии, физике, информатике, экономике или математике.</p>
+    <h1 class="main-title" id="about">Мыслич и Знанич</h1>
+
+    <blockquote>Изучаю, мыслю, знаю!</blockquote>
+    <!--<p>Образовательный Центр "Мыслич и Знанич" создан с целью эффективной подготовки школьников к ЕГЭ и ОГЭ, олимпиадам по химии, физике, информатике, экономике и математике. Наш центр подготовки к ЕГЭ и ОГЭ проводит подготовительные курсы для абитуриентов ВУЗов, в которых при поступлении необходимы глубокие знания по профильным предметам – по химии, физике, информатике, экономике или математике.</p>
     <p>Высокопрофессиональное преподавание и использование новейших методик дают высокий уровень результативности: наши слушатели успешно сдают ОГЭ, ЕГЭ, становятся победителями и занимают призовые места на олимпиадах различных уровней, а также углубляют и расширяют свои знания в химии, физике, информатике, экономике и математике.</p>
     <p>Занятия и консультации проводят педагоги ведущих вузов Москвы и Курска, прошедих повышение квалификации в оразовательном центре "Сириус" образовательного фонда "Талант и Успех".</p>
-    <blockquote>Изучаю, мыслю, знаю!</blockquote>
-    <h2 class="main-title" id="courses">Курсы по направлениям</h2>
+    <blockquote>Изучаю, мыслю, знаю!</blockquote>-->
+    <!--<h2 class="main-title" id="courses">Курсы по направлениям</h2>
     <div class="courses-flex-block">
         <div class="courses-item">
             <div class="courses-img">
@@ -168,15 +170,15 @@
                 Решение бизнес-кейсов
             </div>
         </div>
-        <!--<div class="courses-item">
+        <div class="courses-item">
             <div class="courses-img">
                 <img src="images/deutsch.png" alt="">
             </div>
             <div class="courses-title">
                 Немецкий язык с носителем
             </div>
-        </div>-->
-    </div>
+        </div>
+    </div>-->
     <div class="order-btn">
         <button data-toggle="modal" data-target="#modal-send" class="main-button-obj">ЗАПИСАТЬСЯ</button>
     </div>
