--- a/mislich.html
+++ b/mislich.html
@@ -183,21 +183,24 @@
         <button data-toggle="modal" data-target="#modal-send" class="main-button-obj">ЗАПИСАТЬСЯ</button>
     </div>
     <h2 class="main-title" id="olympic">Приглашам обучающихся для подготовки к олимпиадам по предметам:</h2>
-    <div class="free-service-item">
-        <i class="fa fa-check-circle-o" aria-hidden="true"></i> Математика
+    <div class="main-check-bottom">
+        <div class="free-service-item">
+            <i class="fa fa-check-circle-o" aria-hidden="true"></i> Математика
+        </div>
+        <div class="free-service-item">
+            <i class="fa fa-check-circle-o" aria-hidden="true"></i> Информатика
+        </div>
+        <div class="free-service-item">
+            <i class="fa fa-check-circle-o" aria-hidden="true"></i> Физика
+        </div>
+        <div class="free-service-item">
+            <i class="fa fa-check-circle-o" aria-hidden="true"></i> Химия
+        </div>
+        <div class="free-service-item">
+            <i class="fa fa-check-circle-o" aria-hidden="true"></i> Экономика
+        </div>
     </div>
-    <div class="free-service-item">
-        <i class="fa fa-check-circle-o" aria-hidden="true"></i> Информатика
-    </div>
-    <div class="free-service-item">
-        <i class="fa fa-check-circle-o" aria-hidden="true"></i> Физика
-    </div>
-    <div class="free-service-item">
-        <i class="fa fa-check-circle-o" aria-hidden="true"></i> Химия
-    </div>
-    <div class="free-service-item">
-        <i class="fa fa-check-circle-o" aria-hidden="true"></i> Экономика
-    </div>
+    <!--
     <h2 class="main-title" id="consultations">Консультации</h2>
     <div class="image-consult">
         <img src="images/ege.jpg" alt="">
@@ -218,7 +221,7 @@
     </div>
     <div class="map-block">
         <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A1d75623558d8d49ff909b8f39f8f6d786d358d6ff4a2eadb777cd3a60e5f56bc&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
-    </div>
+    </div>-->
 </div>
 <footer class="back-footer">
     <div class="container">
