--- a/about.html
+++ b/about.html
@@ -28,11 +28,12 @@
             <div class="header-logo">
                 <a href="/">
                     <img src="images/logo.png" alt="">
-                    <span>Мыслич и Знанич</span>
                 </a>
             </div>
-            <div class="header-btn">
-                <button data-toggle="modal" data-target="#modal-send">Записаться</button>
+            <div class="header-title-block">
+                <div class="header-description">Центр дополнительного образования </div>
+                <h1>Мыслич и Знанич</h1>
+                <div class="header-slogan">Изучаю, мыслю, знаю!</div>
             </div>
         </div>
     </div>
@@ -90,10 +91,17 @@
 <div class="container">
     <h1 class="main-title" id="about">О нас</h1>
     <p class="main-sub-title">Центр  дополнительного  образования</p>
-    <p>Образовательный Центр "Мыслич и Знанич" создан с целью эффективной подготовки школьников к ЕГЭ и ОГЭ, олимпиадам по химии, физике, информатике, экономике и математике. Наш центр подготовки к ЕГЭ и ОГЭ проводит подготовительные курсы для абитуриентов ВУЗов, в которых при поступлении необходимы глубокие знания по профильным предметам – по химии, физике, информатике, экономике или математике.</p>
-    <p>Высокопрофессиональное преподавание и использование новейших методик дают высокий уровень результативности: наши слушатели успешно сдают ОГЭ, ЕГЭ, становятся победителями и занимают призовые места на олимпиадах различных уровней, а также углубляют и расширяют свои знания в химии, физике, информатике, экономике и математике.</p>
-    <p>Занятия и консультации проводят педагоги ведущих вузов Москвы и Курска, прошедих повышение квалификации в оразовательном центре "Сириус" образовательного фонда "Талант и Успех".</p>
-    <blockquote>Изучаю, мыслю, знаю!</blockquote>
+    <p>Центр дополнительного образования "Мыслич и Знанич" создан с целью эффективной подготовки школьников к олимпиадам по химии, физике, информатике, экономике и математике.</p>
+
+    <p>Наш центр подготовки к ЕГЭ и ОГЭ проводит подготовительные курсы для абитуриентов ВУЗов, в которых при поступлении необходимы глубокие знания по профильным предметам – по химии, физике, информатике, экономике или математике.</p>
+
+    <p>Высокопрофессиональное преподавание и использование новейших методик в нашем центре дают высокий уровень результативности:</p>
+    <ul>
+        <li>наши слушатели успешно сдают ОГЭ, ЕГЭ;</li>
+        <li>становятся победителями и занимают призовые места на олимпиадах различных уровней;</li>
+        <li>а также углубляют и расширяют свои знания в химии, физике, информатике, экономике и математике.</li>
+    </ul>
+    <p>Занятия и консультации проводят педагоги ведущих вузов Москвы и Курска, прошедших повышение квалификации в образовательном центре "Сириус" образовательного фонда "Талант и Успех".</p>
 
     <div class="order-btn">
         <button data-toggle="modal" data-target="#modal-send" class="main-button-obj">ЗАПИСАТЬСЯ</button>
