--- a/courses.html
+++ b/courses.html
@@ -28,11 +28,12 @@
             <div class="header-logo">
                 <a href="/">
                     <img src="images/logo.png" alt="">
-                    <span>Мыслич и Знанич</span>
                 </a>
             </div>
-            <div class="header-btn">
-                <button data-toggle="modal" data-target="#modal-send">Записаться</button>
+            <div class="header-title-block">
+                <div class="header-description">Центр дополнительного образования </div>
+                <h1>Мыслич и Знанич</h1>
+                <div class="header-slogan">Изучаю, мыслю, знаю!</div>
             </div>
         </div>
     </div>
