--- a/consultations.html
+++ b/consultations.html
@@ -77,20 +77,12 @@
         </div>
     </nav>
 </div>
-<div class="owl-carousel">
-    <div class="owl-item-img">
-        <img src="images/banner1.jpg" alt="">
-    </div>
-    <div class="owl-item-img">
-        <img src="images/banner2.jpg" alt="">
-    </div>
-    <div class="owl-item-img">
-        <img src="images/banner3.jpg" alt="">
-    </div>
-</div>
 <div class="container">
-    <h1 class="main-title" id="about">Мыслич и Знанич</h1>
-    <h2 class="main-title" id="consultations">Консультации</h2>
+    <h1 class="main-title">Консультации</h1>
+    <div class="image-consult">
+        <img src="images/consult.jpg" alt="">
+    </div>
+    <h2 class="olimpic-margin">Мыслич и Знанич оказывает консультационные услуги при подготовке исследовательских работ и проектов школьников.</h2>
     <div class="image-consult">
         <img src="images/ege.jpg" alt="">
     </div>
